--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1206,7 +1206,7 @@ textArea.form-flat {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url(../images/my-pict.jpg);
+  background-image: url(../images/my-pict1.jpg);
   position: absolute;
   left: 0;
   top: 0;
