--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -476,6 +476,11 @@ blockquote {
   padding-top: 0px;
   padding-bottom: 10px;
 }
+.fix-heigh-500px {
+  object-fit: contain;
+  width: 100%;
+  height: 500px !important;
+}
 /*============================
      04. COMPONENTS
 ============================*/
